# service/src/main/resources/api.yml
@@ -121,6 +121,28 @@ paths:
         422:
           $ref: '#/components/responses/UnprocessableEntity'
 
+  /allocations/{id}:
+    delete:
+      summary: 'Delete a allocation by ID'
+      operationId: deleteAllocation
+      tags:
+        - allocation
+      parameters:
+        - name: id
+          in: path
+          required: true
+          description: ID of the allocation
+          schema:
+            type: integer
+            format: int64
+      responses:
+        204:
+          description: 'Delete Successfully'
+        404:
+          description: Not Found
+        422:
+          $ref: '#/components/responses/UnprocessableEntity'
+
 components:
   schemas:
     UpdateRoomDTO:
